# bootlet-switch

./: Cargo.toml  README.md  flake.nix
bootlet-setup/: .gitignore  Makefile  README.md  config.yaml
bootlet-switch-lib/: Cargo.toml
bootlet-switch-lib/src/: comms.rs  error.rs  lib.rs  serial.rs
firmware/: Cargo.toml  README.md  run.sh
firmware/.cargo/: config.toml
firmware/src/: error.rs  macros.rs  main.rs  stm32.rs
firmware/src/core/: comms.rs  mod.rs
firmware/src/core/util/: mod.rs  reader.rs
firmware/src/hal/: mod.rs  serial.rs
firmware/src/stm32/: config.rs  pins.rs  usb.rs
run-bootlet-switch/: Cargo.toml  rust-toolchain.toml
run-bootlet-switch/src/: main.rs
types/: Cargo.toml
types/src/: constant.rs  lib.rs
