[package]
edition = "2024"
name = "bootlet-switch"
version = "0.1.0"
authors = ["minco <mail@drchi.co.kr>"]
resolver = "2"

[[bin]]
name = "bootlet-switch"
test = false
bench = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.4", features = ["stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
static_cell = "2.1.1"
postcard = { version = "1.1.3", features = ["embedded-io"] }

types = { path = "../types" }
